--- a/style.css
+++ b/style.css
@@ -21,3 +21,23 @@ h1{
     background-color: #444;
     transition: background-color 0,3s;
 }
+
+#botoes button{
+    margin:5px;
+    padding: 10px, 20px;
+    border: nome;
+    border-radius: 10px;
+    cursor:pointer;
+    foat-size: 16px;
+}
+#btnVermelho {background-color:#ff4c4c}
+#btnAmarelo {background-color:#ffd633;}
+#btnVerde {background-color:#5cd65c;}
+#btnAuto {background-color:#ccc}
+#btnParar {background-color:limegreen}
+
+/* estilo das luzes acesas*/
+
+.acesa.vermelha {background-color:red;}
+.acesa.amarelo {background-color:yellow;}
+.acesa.verde {background-color:green;}
